app-dev/styles/base/layout.css
/* ... */
	.entity-info.entity-type-fund .entity-body .f-list > .cell:first-child {
		width: 55%;
		}
		.entity-info.entity-type-fund .entity-body .f-list > .cell:last-child {
			width: 45%;
		}


	.entity-info.entity-type-fixed-income .entity-body {
		margin: 0.3rem 0 0.2rem 0;
		}

		.entity-info.entity-type-fixed-income .entity-body .call-to-action {
			margin-top: -0.1rem;
			margin-bottom: -0.3rem;
		}

		.entity-info.entity-type-fixed-income .entity-body .f-list.labels-at-bottom > .cell:first-child {
			width: 70%;
		}
		.entity-info.entity-type-fixed-income .entity-body .f-list.labels-at-bottom > .cell:last-child {
			width: 30%;
		}
		.entity-info.entity-type-fixed-income .entity-body .f-list.labels-at-bottom > .cell > .content {
			padding-top: 0.9rem;
		}
		.entity-info.entity-type-fixed-income .entity-body .f-list.labels-at-bottom > .cell.hero > .content {
			font-size: 1.85em;
			height: 1.9rem;
		}
		.entity-info.entity-type-fixed-income .entity-body .f-list.labels-at-bottom > .cell:last-child > .content {
			font-size: 0.75rem;
		}


	.product-abstract .entity-info.entity-type-fixed-income .entity-body {
		margin: 0;
		}

		.product-abstract .entity-info.entity-type-fixed-income .entity-body .call-to-action {
			height: 2rem;
			position: absolute;
			top: 0;
			bottom: 0;
			right: 0.8rem;
			margin: auto 0;

			font-size: 0.75rem;
			font-weight: 400;
			width: auto;
		}
		.product-abstract .entity-info.entity-type-fixed-income .entity-body .f-list {
			padding: 0;
		}
		.product-abstract .entity-info.entity-type-fixed-income .entity-body .f-list > .cell {
			margin: 0;
			box-sizing: border-box;
		}
		.product-abstract .entity-info.entity-type-fixed-income .entity-body .f-list > .cell:first-child {
			width: 46%;
			margin-left: 8%;
		}
		.product-abstract .entity-info.entity-type-fixed-income .entity-body .f-list > .cell:last-child {
			width: 46%;
		}
		.product-abstract .entity-info.entity-type-fixed-income .entity-body .f-list > .cell > .label {
		}
		.product-abstract .entity-info.entity-type-fixed-income .entity-body .f-list > .cell > .content {
			padding-top: 0;
			font-size: 0.9rem;
			height: auto;
		}
		.product-abstract .entity-info.entity-type-fixed-income .entity-body .f-list > .cell time {
			font-size: 0.75rem;
			font-weight: 500;
		}


.row.hero-content-block-call-to-action { /* homepage */
	min-height: 1.5rem;
	}


.hero-content-block {
	position: relative;
	}

	.hero-content-block {
	position: relative;
	margin: 0 -0.8rem 0;
	padding: 0.5rem 0.8rem;
	}

	.f-block .hero-content-block {
		margin-top: -0.5rem;    /* because .row under .f-block has non-zero padding-top */
		margin-bottom: -0.5rem; /* because .row under .f-block has non-zero padding-bottom */
	}

	.hero-content-block h3 {
		text-align: center;
		margin: 0.25rem auto 0.75rem;
	}

	.hero-content-block h3 > * {
		display: block;
		clear: both;
		line-height: 1.1;
	}

	.hero-content-block h3 .subject {
		font-size: 0.8rem;
		font-weight: normal;
	}

	.hero-content-block h3 .hero-word {
		margin-top: 0.4rem;
		font-size: 2.19rem;
	}

	.hero-content-block h3 .subtitle {
		font-size: 0.6rem;
	}

	.hero-content-block .hero-content-features {
		margin: 0.25rem auto;
		text-align: center;
	}

	.hero-content-block .hero-content-features > .f-list > li {
		display: inline-block;
		vertical-align: top;
	}

	.hero-content-block .hero-content-features > .f-list > li .label {
		display: block;
		font-size: 0.6rem;
	}
	.hero-content-block .hero-content-features > .f-list > li .content {
		display: block;
		font-size: 1rem;
	}


	.hero-content-block.hero-content-block-style-1 { /* homepage */
		}
		.hero-content-block.hero-content-block-style-1 h3 .subject {
			font-size: 1rem;
		}
		.hero-content-block.hero-content-block-style-1 h3 .hero-word {
			margin-top: 0.5rem;
			font-size: 3.19rem;
		}
		.hero-content-block.hero-content-block-style-1 .hero-content-features > .f-list > li {
			margin: 0 0.8rem 0;
		}


	.hero-content-block.hero-content-block-style-4 { /* trading-account-register-succeeded page */
		padding-top: 0.1rem;
		padding-bottom: 0;
		}
		.hero-content-block.hero-content-block-style-4 h3 .subject {
			font-size: 0.9rem;
		}
		.hero-content-block.hero-content-block-style-4 h3 .hero-word {
			margin-top: 0.6rem;
			font-size: 2.5rem;
		}
		.hero-content-block.hero-content-block-style-4 .hero-content-features > .f-list > li {
			margin: 0 0.8rem 0;
			width: 35%;
		}


	.hero-content-block.hero-content-block-style-2 { /* in personal center page */
		}
		.hero-content-block.hero-content-block-style-2 h3 {
			margin-bottom: 0.25rem;
		}


	.color-inverted .hero-content-block.hero-content-block-style-2 { /* in pages such as newbie-reserved-assets */
		padding-bottom: 0.6rem;
		}
		.color-inverted .hero-content-block.hero-content-block-style-2 h3 .hero-word {
			margin-top: 0.6rem;
			margin-bottom: 1.4rem;
		}

		.color-inverted .hero-content-block.hero-content-block-style-2 .hero-content-features > .f-list > li {
			font-weight: lighter;
			width: 33.3%;
		}
		.color-inverted .hero-content-block.hero-content-block-style-2 .hero-content-features > .f-list > li.col-1 {
			text-align: left;
		}
		.color-inverted .hero-content-block.hero-content-block-style-2 .hero-content-features > .f-list > li.col-3 {
			text-align: right;
		}
		.color-inverted .hero-content-block.hero-content-block-style-2 .hero-content-features > .f-list > li.col-1 > .label {
			text-indent: 0;
		}
		.color-inverted .hero-content-block.hero-content-block-style-2 .hero-content-features > .f-list > li.col-3 > .label {
			margin-right: -0.7em;
		}


	.hero-content-block.hero-content-block-style-3 { /* in newbie-call-to-action page */
		margin-top: 0;
		padding-top: 0.75rem;
		padding-bottom: 0.25rem;
		background-repeat: no-repeat;
		background-position: center -2.4rem; /* offset background for page-header bg */
		}
		.hero-content-block.hero-content-block-style-3 h3 {
			margin-top: 0.25rem;
			margin-bottom: 1.5rem;
		}
/* ... */

